--- a/ETourisme/app/src/main/assets/home.html
+++ b/ETourisme/app/src/main/assets/home.html
@@ -60,6 +60,17 @@
             extraordinaire.
         </p>
     </section>
+    <section id="utilisation" class="my-4">
+        <h2 class="display-5">Exemple d'utilisation de l'application</h2>
+        <br/>
+        <div>
+            <video controls width="300" height="300">
+                <source src="{VIDEO_PATH}" type="video/mp4">
+                <p>Votre navigateur ne supporte pas la lecture de vidéos.</p>
+            </video>
+        </div>
+    </section>
+
 </main>
 <footer class="bg-dark text-white text-center py-3">
     <p>Contactez-nous pour plus d'informations sur le tourisme à Madagascar.</p>
